--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!doctype html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta name="description" content="Free Web tutorials">
+  <meta name="keywords" content="HTML, CSS, JavaScript">
+  <meta name="author" content="John Doe">
   <title>Rocio</title>
 </head>
 <body>
-  hola mundo 
+ <style>
+  body {background-color: powderblue;}
+  h1 {color: red;}
+  p {color: blue;}
+</style> 
+  <h1>hola mundo </h1>
+  <p>Rocio</p>
 </body>
 </html>
