--- a/index.html
+++ b/index.html
@@ -1,26 +1,22 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Free Web tutorials">
-    <meta name="keywords" content="HTML, CSS, JavaScript">
-    <meta name="author" content="John Doe">
-  
-    <title>Rocio</title>
-  </head>
+<!DOCTYPE html>
+<html lang="es-ES">
+<head>
+  <meta charset="utf-8">
+  <title> Elemento de formato de párrafo </title>
+
 <body>
+<h1>Este es un encabezado de nivel 1.</h1>
 
-  <style>
-    body {background-color: powderblue;}
-    h1 {color: red;}
-    p {color: blue;}
- </style>
-    
-    <h1>hola mundo </h1>
-    <p>Rocio</p>
+<h6>Pero éste otro es de nivel 6</h6>
 
-  <script>
-   alert(no);
-</script>
+<p>
+Ahora voy a definir un párrafo. Dentro del que pondremos texto en <b>negrita</b>,
+cursiva, <u>subrayada</u> e incluso <b><u>negrita y subrayada</u></b> simultaneamente y
+<b><i><u>negrita, cursiva y subrayada</u></i></b>, mediante el anidamiento de etiquetas.
+Además vamos a mostrar el uso de <sub>subíndices</sub> y de <sup>supraíndices</sup>,
+así como <strong>texto resaltado, que no es negrita</strong>
+</p>
+
 </body>
+</head>
 </html>
