--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@ cursiva, <u>subrayada</u> e incluso <b><u>negrita y subrayada</u></b> simultanea
 Además vamos a mostrar el uso de <sub>subíndices</sub> y de <sup>supraíndices</sup>,
 así como <strong>texto resaltado, que no es negrita</strong>
 </p>
+<ul>
+  <type="1">
+    Primer elemento
+    Segundo elemento
+    Tercer elemento
+  </type>
+</ul>
 
 </body>
 </head>
