--- a/index.html
+++ b/index.html
@@ -22,6 +22,31 @@ así como <strong>texto resaltado, que no es negrita</strong>
     Segundo elemento
     Tercer elemento
   </type>
+   <type="I">
+    Primer elemento
+    Segundo elemento
+    Tercer elemento
+  </type>
+   <start="6">
+    Primer elemento
+    Segundo elemento
+    Tercer elemento
+  </start>
+   <circle>
+    Primer elemento
+    Segundo elemento
+    Tercer elemento
+   </circle>
+   <disc>
+    Primer elemento
+    Segundo elemento
+    Tercer elemento
+  </disc>
+   <square>
+    Primer elemento
+    Segundo elemento
+    Tercer elemento
+  </square>
 </ul>
 
 </body>
