--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ así como <strong>texto resaltado, que no es negrita</strong>
     Primer elemento
     Segundo elemento
     Tercer elemento
-  </type>
+  </type="1">
    <type="I">
     Primer elemento
     Segundo elemento
