--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@ así como <strong>texto resaltado, que no es negrita</strong>
 </p>
 <ul>
   <type="1">
-    Primer elemento
-    Segundo elemento
-    Tercer elemento
+    <li>Primer elemento</li>
+    <li>Segundo elemento</li>
+    <li>Tercer elemento</li>
   </type="1">
    <type="I">
     Primer elemento
