--- a/index.html
+++ b/index.html
@@ -23,29 +23,29 @@ así como <strong>texto resaltado, que no es negrita</strong>
     <li>Tercer elemento</li>
   </type="1">
    <type="I">
-    Primer elemento
-    Segundo elemento
-    Tercer elemento
+   <li>Primer elemento</li>
+    <li>Segundo elemento</li>
+    <li>Tercer elemento</li>
   </type>
    <start="6">
-    Primer elemento
-    Segundo elemento
-    Tercer elemento
+    <li>Primer elemento</li>
+    <li>Segundo elemento</li>
+    <li>Tercer elemento</li>
   </start>
    <circle>
-    Primer elemento
-    Segundo elemento
-    Tercer elemento
+    <li>Primer elemento</li>
+    <li>Segundo elemento</li>
+    <li>Tercer elemento</li>
    </circle>
    <disc>
-    Primer elemento
-    Segundo elemento
-    Tercer elemento
+   <li>Primer elemento</li>
+    <li>Segundo elemento</li>
+    <li>Tercer elemento</li>
   </disc>
    <square>
-    Primer elemento
-    Segundo elemento
-    Tercer elemento
+   <li>Primer elemento</li>
+    <li>Segundo elemento</li>
+    <li>Tercer elemento</li>
   </square>
 </ul>
 
