--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ así como <strong>texto resaltado, que no es negrita</strong>
     <li>Primer elemento</li>
     <li>Segundo elemento</li>
     <li>Tercer elemento</li>
-  </type="3">
+  </type>
   
    <type="I">
    <li>Primer elemento</li>
