--- a/index.html
+++ b/index.html
@@ -47,14 +47,39 @@ así como <strong>texto resaltado, que no es negrita</strong>
     <li>Tercer elemento</li>
   </disc>
   
-   <square>
+   <ul type="square">
    <li>Primer elemento</li>
     <li>Segundo elemento</li>
     <li>Tercer elemento</li>
-  </square>
-  
-</ul>
+    </ul>
+ 
+  <table border="1">
+    <tr>
+        <th><b>Lunes</b></th>
+        <th><b>Martes</b></th>
+        <th><b>Miércoles</b></th>
+        <th><b>Jueves</b></th>
+        <th><b>Viernes</b></th>
+    </tr>
+    
+    <tr>
+        <th>Martes</th>
+        <th>Dibujo</th>
+        <th>Hitoria</th>
+    </tr>
 
+    <tr>
+        <th>Física</th>
+        <th>Lengua</th>
+        <th>Lengua</th>
+      <th>Lengua</th>
+      <th>Lengua</th>
+      <th>Lengua</th>
+      <th>Lengua</th>
+    </tr>
+  </table>
+
+  
 </body>
 </head>
 </html>
