--- a/index.html
+++ b/index.html
@@ -63,13 +63,14 @@ así como <strong>texto resaltado, que no es negrita</strong>
     </tr>
     
     <tr>
-        <th>Martes</th>
-        <th>Dibujo</th>
-        <th>Hitoria</th>
+        <th>Mates</th>
+        <th rowspan="3" rowspan="2">Dibujo</th>
+        <th rowspan="3">Hitoria</th>
     </tr>
 
     <tr>
-        <th>Física</th>
+        <th rowspan="3">Física</th>
+    </tr>
         <th>Lengua</th>
         <th>Lengua</th>
       <th>Lengua</th>
