--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ así como <strong>texto resaltado, que no es negrita</strong>
     <li>Tercer elemento</li>
     </ul>
  
-  <table border="1">
+  <table border="1" style="text-align: center">
     <tr>
         <th><b>Lunes</b></th>
         <th><b>Martes</b></th>
@@ -69,14 +69,17 @@ así como <strong>texto resaltado, que no es negrita</strong>
     </tr>
 
     <tr>
-        <th rowspan="3">Física</th>
+      <th rowspan="3">Física</th>
+      <th>Lengua</th>
+      <th>Inglés</th>
+      <th>Francés</th>
     </tr>
-        <th>Lengua</th>
-        <th>Lengua</th>
-      <th>Lengua</th>
-      <th>Lengua</th>
-      <th>Lengua</th>
-      <th>Lengua</th>
+
+    <tr>
+      <th>EF</th>
+      <th>Fútbol</th>
+      <th>Tenis</th>
+      <th>Mates</th>
     </tr>
   </table>
 
