--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ así como <strong>texto resaltado, que no es negrita</strong>
     <li>Tercer elemento</li>
     </ul>
  
-  <table border="1" style="text-align:center>
+ <table style="text-align:center" border="1">
 <tbody>
 <tr>
   <td><b>Lunes</b></td>
