--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@ cursiva, <u>subrayada</u> e incluso <b><u>negrita y subrayada</u></b> simultanea
 Además vamos a mostrar el uso de <sub>subíndices</sub> y de <sup>supraíndices</sup>,
 así como <strong>texto resaltado, que no es negrita</strong>
 </p>
-<ul>
+
+  <ul>
   <type="1">
     <li>Primer elemento</li>
     <li>Segundo elemento</li>
@@ -89,4 +90,76 @@ así como <strong>texto resaltado, que no es negrita</strong>
 </tr>
 </tbody>
 </table>
+
+<table style="text-align:center" border="1">
+<tbody>
+<tr>
+  <td><b>Horas</b></td>
+  <td><b>Lunes</b></td>
+  <td><b>Martes</b></td>
+  <td><b>Miércoles</b></td>
+  <td> <b>Jueves</b></td>
+  <td><b>Viernes</b></td>
+</tr>
+<tr>
+   <td>8:15 9:15</td>
+   <td>Programación</td>
+   <td>Lenguaje de marca</td>   
+   <td>Bases de datos</td>
+   <td>Digitalización</td>   
+   <td>Sistemas informáticos</td> 
+</tr>
+  
+<tr>
+   <td>9:15 10:15</td>
+   <td>Programación</td>
+   <td>Bases de datos</td>   
+   <td>Bases de datos</td>
+   <td>Lenguaje de marca</td>   
+   <td>Sistemas informáticos</td> 
+</tr>
+  
+  <tr>
+   <td>10:15 11:15</td>
+    <td>Entorno de desarrollo</td>
+   <td>Bases de datos</td>   
+   <td>Sistemas informáticos</td>
+   <td>Lenguaje de marca</td>   
+   <td>Sistemas informáticos</td> 
+</tr>
+  
+ <tr>
+   <td>11:15 11:45</td>
+   <td rowspan="1" colspan="5"><b>R     e       c     r     e    o</b></td>
+ </tr> 
+ 
+ <tr>
+   <td>11:45 12:45</td>
+   <td>Entornos de desarrollo</td>
+   <td>Programación</td>   
+   <td>Sistemas informáticos</td>
+   <td>IPE</td>   
+   <td>Programación</td> 
+</tr>
+  
+<tr>
+   <td>12:45 13:45</td>
+   <td>Bases de datos</td>
+   <td>Programación</td>   
+   <td>Sostenibilidad</td>
+   <td>Programación</td>   
+   <td>Programación</td> 
+</tr>
+  
+<tr>
+   <td>13:45 14:45</td>
+   <td>Bases de datos</td>
+   <td>Entornos de desarrollo</td>   
+   <td>IPE</td>
+   <td>Programación</td>   
+   <td>IPE</td> 
+</tr>
+</tbody>
+</table>
+    
 </html>
