--- a/index.html
+++ b/index.html
@@ -161,5 +161,30 @@ así como <strong>texto resaltado, que no es negrita</strong>
 </tr>
 </tbody>
 </table>
-    
+
+  <h1>Ejemplo con marcadores locales</h1>
+<ol>
+    <li>Rojo</li>
+    <li>Amarillo</li>
+    <li>Azul</li>
+    <li>Verde</li>
+</ol>
+<h1>Color negro</h1>
+<p>Lorem fistrum consectetur incididunt hasta luego Lucas amatomaa cillum. Enim tempor diodeno a wan por la gloria de mi madre ex jarl cillum la caidita consequat apetecan. Amatomaa va ust&eacute; muy cargadoo no te digo trigo por no llamarte Rodrigor consequat sed. Sit amet elit ut magna consectetur te va a has&eacute; pupitaa aliquip te va a has&eacute; pupitaa. Sit amet la caidita consectetur la caidita por la gloria de mi madre minim a wan amatomaa. La caidita dolore officia a peich duis mamaar consequat se calle ust&eacute;e a wan. Eiusmod tiene musho peligro dolore sed enim pecador. Al ataquerl diodenoo amatomaa qui caballo blanco caballo negroorl sed sexuarl quis papaar papaar quietooor. Elit fistro et amatomaa nostrud eiusmod incididunt ex te voy a borrar el cerito.</p>
+<p>Subir</p>
+<h1><a name="marca_rojo">Color rojo</a></h1>
+<p>Consequat irure ese que llega enim consectetur quis pecador sed a gramenawer no puedor sexuarl. Tempor ahorarr eiusmod irure sexuarl amatomaa caballo blanco caballo negroorl dolore ahorarr commodo. De la pradera aliquip sit amet no puedor a peich quis qui pupita consectetur. Te va a has&eacute; pupitaa al ataquerl ese que llega a wan diodenoo no puedor. Duis officia esse cillum por la gloria de mi madre a gramenawer jarl la caidita ese que llega quietooor nostrud. Benemeritaar sed se calle ust&eacute;e jarl esse enim ahorarr a peich veniam. Va ust&eacute; muy cargadoo enim diodenoo tiene musho peligro torpedo a peich diodeno velit papaar papaar. Al ataquerl occaecat te va a has&eacute; pupitaa te voy a borrar el cerito ese que llega qui sed ad se calle ust&eacute;e commodo et. Torpedo magna incididunt ullamco irure aliqua esse commodo.</p>
+<p>Subir</p>
+<h1><a name="marca_amarillo">Color amarillo</a></h1>
+<p>Commodo duis mamaar pupita elit consectetur mamaar elit adipisicing sexuarl. Enim eiusmod adipisicing benemeritaar ese pedazo de la caidita te voy a borrar el cerito laboris. Consectetur incididunt papaar papaar aliquip qui magna dolore elit dolor. Aliqua sed benemeritaar ese hombree aliqua labore. Occaecat papaar papaar tempor est&aacute; la cosa muy malar exercitation qu&eacute; dise usteer me cago en tus muelas laboris consectetur. Qui al ataquerl et velit apetecan. Adipisicing officia qu&eacute; dise usteer eiusmod se calle ust&eacute;e qu&eacute; dise usteer pupita. No puedor no puedor elit fistro officia nisi ese pedazo de. Se calle ust&eacute;e te voy a borrar el cerito ese que llega ese hombree labore.</p>
+<p>Subir</p>
+<h1><a name="marca_azul">Color azul</a></h1>
+<p>Lorem fistrum a peich voluptate officia incididunt dolor no puedor aute qui. Officia diodeno esse quis diodeno et pecador ex. Reprehenderit ese que llega elit ese que llega ullamco pecador hasta luego Lucas magna. Veniam me cago en tus muelas est&aacute; la cosa muy malar se calle ust&eacute;e aliquip. Ullamco aute reprehenderit llevame al sircoo consectetur jarl va ust&eacute; muy cargadoo caballo blanco caballo negroorl sed.</p>
+<p>Subir</p>
+<h1><a name="marca_verde">Color verde</a></h1>
+<p>Irure tempor ese hombree diodenoo papaar papaar consequat me cago en tus muelas magna duis no puedor cillum. Ahorarr va ust&eacute; muy cargadoo ullamco adipisicing apetecan ese hombree. Hasta luego Lucas ese hombree consectetur benemeritaar apetecan occaecat esse exercitation consectetur ese hombree sexuarl. Aliqua sit amet apetecan te va a has&eacute; pupitaa velit consectetur reprehenderit ese que llega. Tempor sit amet labore ese pedazo de aliqua te voy a borrar el cerito magna. Caballo blanco caballo negroorl te voy a borrar el cerito adipisicing tempor. Se calle ust&eacute;e reprehenderit qu&eacute; dise usteer tiene musho peligro qu&eacute; dise usteer elit qu&eacute; dise usteer. Dolore exercitation elit esse ese hombree ese que llega.</p>
+<p>Subir</p>
+<h1><a name="marca_blanco">Color blanco</a></h1>
+<p>Qui torpedo hasta luego Lucas ese hombree diodeno por la gloria de mi madre llevame al sircoo torpedo te va a has&eacute; pupitaa consequat. Llevame al sircoo irure pupita voluptate quis. Se calle ust&eacute;e por la gloria de mi madre ex papaar papaar est&aacute; la cosa muy malar irure duis tiene musho peligro a peich officia ut. Llevame al sircoo commodo fistro a gramenawer nostrud ullamco va ust&eacute; muy cargadoo ex va ust&eacute; muy cargadoo a gramenawer sed. Sit amet voluptate nisi de la pradera de la pradera qui de la pradera.</p>
+<p>Subir</p>
 </html>
