--- a/index.html
+++ b/index.html
@@ -162,17 +162,20 @@ así como <strong>texto resaltado, que no es negrita</strong>
 </tr>
 </tbody>
 </table>
+ 
   </br>
-  <h1>Ejemplo con marcadores locales</h1>
+ 
+    <h1>Ejemplo con marcadores locales</h1>
 <ol>
-    <li>Rojo</li>
-    <li>Amarillo</li>
-    <li>Azul</li>
-    <li>Verde</li>
+    <li><a href="#marca_rojo">Rojo</a></li>
+    <li><a href="#marca_amarillo">Amarillo</a></li>
+    <li><a href="#marca_azul">Azul</a></li>
+    <li><a href="#marca_verde">Verde</a></li>
 </ol>
 <h1>Color negro</h1>
 <p>Lorem fistrum consectetur incididunt hasta luego Lucas amatomaa cillum. Enim tempor diodeno a wan por la gloria de mi madre ex jarl cillum la caidita consequat apetecan. Amatomaa va ust&eacute; muy cargadoo no te digo trigo por no llamarte Rodrigor consequat sed. Sit amet elit ut magna consectetur te va a has&eacute; pupitaa aliquip te va a has&eacute; pupitaa. Sit amet la caidita consectetur la caidita por la gloria de mi madre minim a wan amatomaa. La caidita dolore officia a peich duis mamaar consequat se calle ust&eacute;e a wan. Eiusmod tiene musho peligro dolore sed enim pecador. Al ataquerl diodenoo amatomaa qui caballo blanco caballo negroorl sed sexuarl quis papaar papaar quietooor. Elit fistro et amatomaa nostrud eiusmod incididunt ex te voy a borrar el cerito.</p>
 <p>Subir</p>
+<p><br></p>
 <h1><a name="marca_rojo">Color rojo</a></h1>
 <p>Consequat irure ese que llega enim consectetur quis pecador sed a gramenawer no puedor sexuarl. Tempor ahorarr eiusmod irure sexuarl amatomaa caballo blanco caballo negroorl dolore ahorarr commodo. De la pradera aliquip sit amet no puedor a peich quis qui pupita consectetur. Te va a has&eacute; pupitaa al ataquerl ese que llega a wan diodenoo no puedor. Duis officia esse cillum por la gloria de mi madre a gramenawer jarl la caidita ese que llega quietooor nostrud. Benemeritaar sed se calle ust&eacute;e jarl esse enim ahorarr a peich veniam. Va ust&eacute; muy cargadoo enim diodenoo tiene musho peligro torpedo a peich diodeno velit papaar papaar. Al ataquerl occaecat te va a has&eacute; pupitaa te voy a borrar el cerito ese que llega qui sed ad se calle ust&eacute;e commodo et. Torpedo magna incididunt ullamco irure aliqua esse commodo.</p>
 <p>Subir</p>
